# oshw4

./: .gitignore  CMakeLists.txt  README.md  alphabet.txt  test.txt
sh/: openmp.sh
src/3way_mpi/: mpi.c
src/3way_openmp/: .openmp.c.swp  openmp.c
src/3way_pthread/: pthread.c
test/: tests
